# terminal-tv

./: .gitignore  README.md  batch.csv  example_batch.csv  requirements.txt  setup.sh
filetypes/: dtrm  trm
src/: main.py
src/converter/: Character.py  Converter.py  Frame.py  ImageP.py  Performance_Tests.py  Printer.py  Quick_Converter.py  Translate.py  Video.py  __main__.py  config.py  config.txt
src/cpp_converter/: CMakeLists.txt  Converter  Makefile  build.sh
src/cpp_converter/src/: main.cpp
src/io/: Directory.py  Episode.py  FileReader.py  FileWriter.py  KBHit.py
src/player/: Directory.py  Player.py  Progress_Bar.py  Screens.py  Selector.py  __main__.py
